# BACScan

./: .gitignore  BACScan_start.py  README.md  add_node.py  build_dependence.py  crawler_run.py  package-lock.json  package.json  pyproject.toml  target.json  vuln_scan.py
auth/memos/: admin_nav.json  user_det.json  user_nav.json
config/: config.py  crawl_config.py
crawler/: conf.py  task.py  utils.py
crawler/browser/: __init__.py  browser.py  page.py
crawler/browser/js/: __init__.py  js_crawlergo.py
crawler/crawl/: __init__.py  crawl.py
crawler/crawl/modules/: __init__.py  console.py  event.py  form.py  link.py  route.py
crawler/filters/: __init__.py  filter.py
crawler/filters/libfilters/: __init__.py  dom.py  filter.py  simple.py  smart.py
crawler/models/: __init__.py  nav_graph.py  request.py  url.py
vuln_detection/: vuln_scan.py
vuln_detection/core/: failure.py  http_client.py  param_variants.py  replay.py  response_store.py
vuln_detection/input/XPath_cluster/: memos.json
vuln_detection/input/controllable_id/: memos_params.json
vuln_detection/input/data_dependence/: memos.json
vuln_detection/input/merged_navigraph/: memos.json
vuln_detection/input/nav_graphs/memos/: admin_navigraph.json  user_navigraph.json  visitor_navigraph.json
vuln_detection/similarity/: dom_similarity.py  json_similarity.py
vuln_detection/utils/: data_dependence_util.py  data_dependence_util_bak.py  dom_converter_util.py  es_util.py  graph_util.py  pipeline_context.py
